--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.27",
     "better-sqlite3": "^8.1.0",
+    "dotenv": "^16.0.3",
     "lodash": "^4.17.21"
   }
 }
