--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.27",
+    "axios": "^1.3.4",
     "better-sqlite3": "^8.1.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21"
