--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "knex": "^2.4.2",
+    "koa": "^2.14.1",
+    "koa-router": "^12.0.0",
     "pg": "^8.9.0",
     "puppeteer": "19.7.2",
     "puppeteer-extra": "^3.3.4",
