--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "puppeteer": "19.7.2",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-adblocker": "^2.13.5",
-    "puppeteer-extra-plugin-stealth": "^2.11.1"
-  },
-  "devDependencies": {
+    "puppeteer-extra-plugin-stealth": "^2.11.1",
     "@googlemaps/google-maps-services-js": "^3.3.27",
     "axios": "^1.3.4",
-    "better-sqlite3": "^8.1.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "better-sqlite3": "^8.1.0"
   }
 }
