--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: nepremicninedb
-    databaseName: nepremicninedb
-    user: nepremicninedb
+  - name: rortest
+    databaseName: rortest
+    user: rortest
     region: frankfurt
     plan: free
 services:
@@ -15,5 +15,5 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: nepremicninedb
+          name: rortest
           property: connectionString
