--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test": "npx eslint *.js"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.27",
+    "@logtail/node": "^0.4.0",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "knex": "^2.4.2",
     "koa": "^2.14.1",
     "koa-router": "^12.0.0",
+    "lodash": "^4.17.21",
     "pg": "^8.9.0",
     "puppeteer": "19.7.2",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-adblocker": "^2.13.5",
-    "puppeteer-extra-plugin-stealth": "^2.11.1",
-    "@googlemaps/google-maps-services-js": "^3.3.27",
-    "axios": "^1.3.4",
-    "dotenv": "^16.0.3",
-    "lodash": "^4.17.21"
+    "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "devDependencies": {
     "better-sqlite3": "^8.1.0",
